[package]
name = "prj3"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.40"
clap = { version = "4.5.29", features = ["derive"] }
hostname = "0.4.0"
nix = { version = "0.29.0", features = ["poll"] }
serde = { version = "1.0.217", features = ["derive"] }
timer = "0.2.0"
